--- a/hello.html
+++ b/hello.html
@@ -6,7 +6,9 @@
     <title>Git testing</title>
     <link rel="stylesheet" href="hello.css">
 
-    <h1> Hello world!</h1>
+    <h1> Hello world! </h1>
+    <p>Kibuh</p>
+    <p>Hi </p>
 </head>
 <body>
     
