--- a/hello.html
+++ b/hello.html
@@ -6,10 +6,7 @@
     <title>Git testing</title>
     <link rel="stylesheet" href="hello.css">
 
-    <h1 class="hello"> Hello world! </h1>
-    <p>Kibuh</p>
-    <p>Hi </p>
-    <p> I just did something new</p>
+    <h1> Hello world!</h1>
 </head>
 <body>
     
