--- a/hello.html
+++ b/hello.html
@@ -6,18 +6,12 @@
     <title>Git testing</title>
     <link rel="stylesheet" href="hello.css">
 
-<<<<<<< HEAD
     <h1> Hello world!</h1>
-||||||| 9471d8f... Modified the new branch
-    <h1 class="hello"> Hello world! </h1>
-    <p>Kibuh</p>
-    <p>Hi </p>
-    <p> I just did something new</p>
-=======
     <h1> Hello world! </h1>
     <p>Kibuh</p>
     <p>Hi </p>
->>>>>>> parent of 9471d8f... Modified the new branch
+    <p>Dieffi</p>
+    <p>Hi </p>
 </head>
 <body>
     
