--- a/hello.html
+++ b/hello.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="hello.css">
 
     <h1> Hello world! </h1>
-    <p>Kibuh</p>
-	<p>Prosper</p>
+    <p>Steed</p>
+	<p>Sensei</p>
     <p>Hi </p>
 </head>
 <body>
