--- a/hello.html
+++ b/hello.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="hello.css">
 
     <h1> Hello world! </h1>
-    <p>Steed</p>
+    <p1> Hello world! </p1>
+    <p2>Steed</p2>
 	<p>Sensei</p>
     <p>Hi </p>
 </head>
